// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-pattern-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with custom props 1`] = `
<div
  class="layout"
>
  <div
    class="flex xs6"
  >
    <div
      class="v-input v-text-field v-select v-autocomplete v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active v-label--is-disabled theme--light"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <input
              aria-label="Custom label"
              autocomplete="off"
              disabled="disabled"
              name="custom_filter_infos_attribute_name.dictionary"
              role="combobox"
              type="text"
            />
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex pl-3 xs6"
  >
    <div
      class="v-input v-text-field v-select v-input--hide-details v-input--is-disabled theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--is-disabled theme--light"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <div
              class="v-select__selections"
            >
              <input
                aria-label="Custom label"
                aria-readonly="false"
                autocomplete="on"
                disabled="disabled"
                name="custom_filter_infos_attribute_name.field"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-pattern-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Test text
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-pattern-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with default props 1`] = `
<div
  class="layout"
>
  <div
    class="flex xs6"
  >
    <div
      class="v-input v-text-field v-select v-autocomplete v-input--hide-details theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <label
              aria-hidden="true"
              class="v-label theme--light"
              style="left: 0px; position: absolute;"
            >
              Dictionary
            </label>
            <input
              aria-label="Dictionary"
              autocomplete="off"
              name="infos.dictionary"
              role="combobox"
              type="text"
            />
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex pl-3 xs6"
  >
    <div
      class="v-input v-text-field v-select v-input--hide-details v-input--is-disabled theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--is-disabled theme--light"
              style="left: 0px; position: absolute;"
            >
              Field
            </label>
            <div
              class="v-select__selections"
            >
              <input
                aria-label="Field"
                aria-readonly="false"
                autocomplete="on"
                disabled="disabled"
                name="infos.field"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-pattern-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <div
          class="v-list__tile theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              No data available
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
